Mon Jun 30 17:35:25 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * config/pin_base.mpb:
        * config/pintool.mpb:
        * config/winapp.mpb:
        * config/wireshark.mpb:
        * docs/README:
        * docs/USAGE:
        * modules/VC14ProjectCreator.pm:
        * modules/VC14WorkspaceCreator.pm:

          Removed references to vc13.

        * modules/VC13ProjectCreator.pm:
        * modules/VC13WorkspaceCreator.pm:
        * templates/vc13dll.mpt:
        * templates/vc13exe.mpt:
        * templates/vc13lib.mpt:
        * templates/vc13libexe.mpt:
        * templates/vc13platforms.mpt:

          Removed these files.  It turned out that vc13 was redundant and is
          covered by vc12.

        * modules/ProjectCreator.pm:

          Fixed a bug in the handling of the dependency attribute of the
          'after' keyword.

Mon Jun 30 12:28:49 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC8WorkspaceCreator.pm:

          Support a dependency attribute for C# projects.  By default, using
          the 'after' keyword causes a build depency *and* a project
          reference to be created.  Using a dependency attribute of
          'ProjectReference=false' on the 'after' setting will cause the
          build dependency to be retained, but the project reference will
          not be created.

        * modules/WorkspaceCreator.pm:

          If a workspace is in a directory below a project, the project
          references will be wrong due to the use of '..' within the
          generated project path.  We will resolve the path as much as
          possible before counting the directory levels to ensure that the
          generated relative path is correct.

Fri Jun 27 15:07:30 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc8csharp.txt:
        * templates/vc8csharp.mpd:

          Added support for the UICulture setting.

Fri Jun 27 13:55:06 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>
