@@ -165,24 +165,24 @@ sub run {
     if ($arg =~ /^\-D(\w+)(=(.*))?/) {
       $macros{$1} = $3;
     }
-    elsif ($arg =~ /^\-I(.*)/) {
+    elsif ($arg =~ /^\-(I|isystem)(.*)/) {
       # support '-Idir' and '-I dir'
-      if ('' ne $1) {
-        push(@ipaths, File::Spec->canonpath($1));
+      my $opt = $1;
+      if ('' ne $2) {
+        push(@ipaths, File::Spec->canonpath($2));
       }
       else {
         # get next arg
         if (++$i < $argc) {
           $arg = $$args[$i];
           if ($arg =~ /^\-/) {
-            $self->usageAndExit('Invalid use of -I');
+            $self->usageAndExit('Invalid use of -' . $opt);
           }
 
           push(@ipaths, File::Spec->canonpath($arg));
-
         }
         else {
-          $self->usageAndExit('Invalid use of -I');
+          $self->usageAndExit('Invalid use of -' . $opt);
         }
       }
     }
